--- a/packages/api-doc-viewer/src/components/JsoViewer/styles/JsoValue.css
+++ b/packages/api-doc-viewer/src/components/JsoViewer/styles/JsoValue.css
@@ -1,6 +1,5 @@
 .jso-value {
   font-size: 12px;
-  margin-bottom: 2px;
 }
 
 .jso-value.text {
@@ -9,7 +8,7 @@
 }
 
 .jso-value.block {
-  padding: 2px 4px;
+  padding: 0px 8px;
   color: rgb(100, 116, 139);
   background-color: rgb(243, 244, 246);
   border-radius: 4px;
